# shimmytok

./: .gitignore  AUTHORS.md  BPE_VALIDATION_PLAN.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  IMPLEMENTATION_PLAN.md  LICENSE-MIT  LLAMA_CPP_PARITY_PLAN.md  README.md  ROADMAP.md  SECURITY.md  SHIMMYTOK_MASTER_PLAN.md  SPONSORS.md  TOKENIZATION_REFACTOR_PLAN.md  TOKENIZER_COMPARE_LLAMA_CPP_vs_SHIMMYTOK.md  TOKENIZER_VALIDATION_AUDIT.md  V0.7.0_RELEASE_PLAN.md  test_pattern.rs
.github/: CURRENT_TASKS.instructions.md  FUNDING.yml  copilot-instructions.md
.github/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.6.0.md  v0.7.0.md
.github/workflows/: ci.yml  dco-check.yml  release.yml
benches/: tokenization.rs
docs/: ACTUAL_GAPS.md  API_STABILITY.md  ARCHITECTURE_ANALYSIS.md  AUDIT_ROUND_1.md  AUDIT_ROUND_2.md  AUDIT_ROUND_3.md  AUDIT_ROUND_4.md  AUDIT_TODO.md  BETTER_PLAN.md  BPE_ANALYSIS.md  BPE_COMPLETION_SUMMARY.md  BPE_IMPLEMENTATION_PLAN.md  BPE_PATTERNS.md  EXECUTIVE_SUMMARY.md  FUTURE_ENHANCEMENTS.md  GITHUB_ACTIONS_ASSESSMENT.md  GPT_PLANS.md  HONEST_AUDIT_FINAL.md  HOSTILE_AUDIT.md  HOSTILE_BPE_AUDIT.md  LIBSHIMMY_REQUIREMENTS.md  PHASE_1_2_IMPLEMENTATION_PLAN.md  PRODUCTION_AUDIT.md  PRODUCTION_READY.md  PUBLISHING_CHECKLIST.md  RUST_TOKENIZER_LANDSCAPE.md  SHIMMYTOK_MASTER_PLAN.md  SHIMMYTOK_OSS_STANDARDS_AUDIT.md  TOKENIZER_VALIDATION_AUDIT.md  V0.7.0_RELEASE_PLAN.md
examples/: basic.rs  check_model.rs  debug_gguf.rs  test_regex.rs  verify_real.rs
scripts/: download_bpe_models.sh
src/: bpe.rs  byte_encoder.rs  gguf.rs  invariants.rs  lib.rs  plamo2.rs  rwkv.rs  sentencepiece.rs  ugm.rs  vocab.rs  wpm.rs
tests/: debug_merges.rs  test_basic.rs  test_bpe.rs  test_bpe_edge_cases.rs  test_bpe_merge.rs  test_bpe_validation.rs  test_clean_spaces.rs  test_comprehensive.rs  test_coverage.rs  test_debug.rs  test_detailed.rs  test_error_handling.rs  test_llama_cpp_parity.rs  test_merge_debug.rs  test_multi_pattern.rs  test_new_constructors.rs  test_pattern_debug.rs  test_portable_parity.rs  test_proptest.rs  test_real_models.rs  test_spm_brace.rs  test_starcoder_debug.rs  test_streaming.rs  test_tokens.rs
tests/common/: mod.rs
tests/fixtures/: golden_spm.json
