[package]
name = "shimmytok"
version = "0.1.0"
edition = "2021"
authors = ["shimmytok contributors"]
description = "Pure Rust tokenizer for GGUF models with llama.cpp compatibility (SentencePiece + BPE)"
keywords = ["tokenizer", "gguf", "llama", "sentencepiece", "llm"]
categories = ["text-processing", "encoding", "parser-implementations"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Michael-A-Kuykendall/shimmytok"
documentation = "https://docs.rs/shimmytok"

[dependencies]
thiserror = "2.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.0"
serde_json = "1.0"
